Fix mobile masthead gap: use -5vw instead of em (scales with auto-fit font)

--- a/style.css
+++ b/style.css
@@ -415,7 +415,7 @@ footer {
   }
 
   .masthead h2 {
-    margin-top: -0.3em;
+    margin-top: -5vw;
   }
 
   .stories li a {
